syntax = "proto3";

import "entities/projects.proto";
import "entities/config.proto";
import "entities/common.proto";
import "api/core.proto";

message GetProjectRequirementsResponse {
  repeated ProjectRequirement missing_requirements = 1;
}

message GetProjectStatusResponse {
  // Number of blocks that our backend needs to process.
  uint32 total_blocks_to_process = 1;
  ServiceStatus flow_api_status = 2;
}

message GetAllProjectsResponse {
  repeated Project projects = 1;
}

message GetPollingProjectsRequest {
  uint32 timestamp = 1;
}

message GetPollingProjectsResponse {
  repeated Project data = 1;
  PollingMetaData meta = 2;
}

message CreateProjectResponse {
  FlowserError error = 1;
  Project project = 2;
}

message UpdateProjectResponse {
  FlowserError error = 1;
  Project project = 2;
}

message UseProjectResponse {
  FlowserError error = 1;
  Project project = 2;
}

message GetSingleProjectResponse {
  Project project = 1;
}

// Represents the set of all objects associated with your project.
// This response won't support the default polling behaviour.
// In case this will be needed, implement separate endpoints for retrieving individual objects.
message GetProjectObjectsResponse {
  repeated TransactionTemplate transactions = 1;
  repeated ContractTemplate contracts = 2;
}
